test/tests/compiler/9_functions/valid/arguments_in_registers/single_arg.plx
pub fn twice(x: i32) i32 {
    return 2 * x
}

pub fn main(none) i32 {
    return twice(3)
}

